change filter tests